--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proxmox LXC Web 管理器</title>
-    <link rel="icon" href="https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png" type="image/png">
-    <link rel="shortcut icon" href="https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png" type="image/png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="[https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png](https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png)" type="image/png">
+    <link rel="shortcut icon" href="[https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png](https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png)" type="image/png">
+    <link href="[https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css](https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css)" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body class="bg-light">
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1><img src="https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png" alt="PVE" class="me-2">Proxmox LXC Web 管理器</h1>
+            <h1><img src="[https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png](https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png)" alt="PVE" class="me-2">Proxmox LXC Web 管理器</h1>
             </div>
 
         <div id="pveError" class="alert alert-danger d-none" role="alert"></div>
@@ -26,14 +26,14 @@
                             创建新容器
                         </button>
                         <button class="btn btn-outline-primary btn-sm d-flex align-items-center" onclick="loadContainers()">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise me-1" viewBox="0 0 16 16">
+                            <svg xmlns="[http://www.w3.org/2000/svg](http://www.w3.org/2000/svg)" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise me-1" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
                                 <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
                             </svg>
                             刷新列表
                         </button>
                         <button type="button" class="btn btn-outline-info btn-sm d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#quickCommandsModal">
-                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightning-charge me-1" viewBox="0 0 16 16">
+                           <svg xmlns="[http://www.w3.org/2000/svg](http://www.w3.org/2000/svg)" width="16" height="16" fill="currentColor" class="bi bi-lightning-charge me-1" viewBox="0 0 16 16">
                               <path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09zM4.157 8.5H7a.5.5 0 0 1 .478.647L6.11 13.59l5.732-6.09H9a.5.5 0 0 1-.478-.647L9.89 2.41 4.157 8.5z"/>
                             </svg>
                             快捷命令
@@ -103,8 +103,8 @@
     </div></form></div></div></div></div>
     <div class="modal fade" id="quickCommandsModal" tabindex="-1"><div class="modal-dialog modal-lg"><div class="modal-content"><div class="modal-header"><h5 class="modal-title" id="quickCommandsModalLabel">管理快捷命令</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div><div class="modal-body"><h6>已有命令</h6><ul class="list-group mb-4" id="quickCommandsList"><li class="list-group-item">正在加载...</li></ul><h6>添加新命令</h6><form id="addQuickCommandForm"><div class="row g-3"><div class="col-md-4"><label for="quickCommandName" class="form-label">名称</label><input type="text" class="form-control" id="quickCommandName" required></div><div class="col-md-8"><label for="quickCommandValue" class="form-label">命令 (可多行)</label><textarea class="form-control" id="quickCommandValue" rows="3" required></textarea></div><div class="col-12"><button type="submit" class="btn btn-success" id="addQuickCommandButton">添加命令</button></div></div></form><div id="quickCommandError" class="alert alert-danger mt-3 d-none"></div></div></div></div></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="[https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js](https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js)"></script>
+    <script src="[https://code.jquery.com/jquery-3.6.0.min.js](https://code.jquery.com/jquery-3.6.0.min.js)"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
