--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
     <title>Proxmox LXC Web 管理器</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', path='css/style.css') }}">
-    <link rel="icon" href="https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png" type="image/png">
+    <link rel="icon" href="https://www.proxmox.com/favicon.svg" type="image/png">
 </head>
 <body class="bg-light">
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1><img src="https://www.proxmox.com/images/proxmox/Proxmox_Monogram_RVB-16x16.png" alt="PVE" class="me-2" style="width: 24px; height: 24px;">Proxmox LXC Web 管理器</h1>
+            <h1><img src="https://www.proxmox.com/favicon.svg" alt="PVE" class="me-2" style="width: 24px; height: 24px;">Proxmox LXC Web 管理器</h1>
         </div>
 
         <div id="pveError" class="alert alert-danger d-none" role="alert"></div>
